replaces google with mapbox. next up: booking

--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
     "@ant-design/icons": "^5.3.7",
     "@koa/cors": "*",
     "@koa/router": "^12.0.1",
-    "@reduxjs/toolkit": "^2.2.6",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "ant-design": "^1.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
+    "env": "^0.0.2",
     "http-status": "^1.7.4",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
+    "mapbox-gl": "^1.13.3",
+    "mapbox-gl-geocoder": "^2.0.1",
     "mini-dynamic-antd-theme": "^0.5.5",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.1.2",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.24.1",
     "unique-random": "^4.0.0",
     "zustand": "^4.5.4"
