--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ant-design": "^1.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
+    "dayschedule-widget": "^1.2.1",
     "env": "^0.0.2",
     "http-status": "^1.7.4",
     "koa": "^2.15.3",
